# kino

./: .gitignore  README.md  aero.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: scrape.yml
kino/: __main__.py  aero.py  edison.py  flags.py  format_json.py  icalendar.py  scraper.py
src/kino/: __main__.py  flags.py  models.py  scraper.py
tests/: test_icalendar.py  test_models.py  test_scraper.py
