[project]
name = "kino"
version = "0.1.0"
description = "Honza Javorek's personal cinema scraper"
readme = "README.md"
authors = [{name = "Honza Javorek", email = "mail@honzajavorek.cz"}]
license = {text = "AGPL-3.0-only"}
requires-python = ">=3.13,<3.14"
dependencies = [
    "click>=8.2.1",
    "crawlee[beautifulsoup]>=0.6.12",
    "emoji-country-flag>=2.0.1",
    "ics>=0.7.2",
    "pycountry>=24.6.1",
    "pydantic>=2.11.7",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-ruff>=0.5",
    "ruff>=0.12.12",
]

[project.urls]
repository = "https://github.com/honzajavorek/kino"

[project.scripts]
kino = "kino.__main__:main"

[tool.pytest.ini_options]
python_files = "test_*.py"
testpaths = "tests"
addopts = "--import-mode=importlib --ff --ruff --ruff-format"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2

[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"
